# vulcan

./: .gitignore  .pylintrc  3d_json_generator.ipynb  Cargo.toml  Makefile  README.md  activate  activate-env  build-wheel.sh  config.ini  docker-compose.yml  download.py  interface.html  main.py  pyproject.toml  requirements.txt  scoping.md  setup.cfg  setup.py  work_in_progress.md
database/: config.py  crud.py  database-manager.ipynb  link-statistics.ipynb  load_links.ipynb  load_pages.ipynb  load_qualities.ipynb  models.py  page.py  section-statistics.ipynb
database/data/: stopwords.py
database_builder/: .coverage  Dockerfile  main.py  requirements.txt
database_builder/database/: indices.py  load_links.ipynb  load_tokens.ipynb
database_builder/db-dump-processer/: README.md
database_builder/wikitools/: wikipage.py
db/: config.py  crud.py  database-manager.ipynb
db-dump-processer/: README.md  dump-flow.py  dump-test-flow.py  etl-flow.py  etl_flow.py
examples/: Interactive_demo.html  Orbiting_demo.html
first-iteration/: macro.sh
notebooks/: 3d_json_generator.ipynb  database-manager.ipynb  database.ipynb  experimental_igraph_wikipedia.ipynb  link_load.ipynb  notes  section-statistics.ipynb  tutorial_database.ipynb
notebooks/dump-processer/: dump-flow.py  longest_titles.txt
notebooks/etl/: load_pages.ipynb  load_qualities.ipynb
paper/: My Collection.bib  README  final-paper.tex
py_src/vulcan/: __init__.py
research/: notes.md  work_in_progress.md
scripts/: build-wheels.sh  etl_flow.py
src/: lib.rs
src/database/: build_db.py  config.py  crud.py  indices.py  sql.py  tf-idf.ipynb  utils.py
src/vulcan.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/wikitools/: wikixml.py
static/data/: Quantum_Mechanics_v_11_e_10.json  Quantum_Mechanics_v_3323_e_5537.json  Quantum_Mechanics_v_531_e_788.json  (+5 more)
tests/: test_download.py  test_wikidump.py  test_wikipage.py  test_wikixml.py
vscode/: settings.json
wikitools/: wikidownload.py  wikidump.py  wikipage.py  wikixml.py
(+21 files in other folders)
