[metadata]
name = vulcan
version = 0.1.0a1
author = Colin Dablain
author_email = colin.dablain@r3th.ink
description = A package for building a Postgres database from Wikipedia database dumps
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/DayOfThePenguin/vulcan
project_urls =
    Bug Tracker = https://github.com/DayOfThePenguin/vulcan/issues
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python :: 3.8
    License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    blist==1.3.6
    mwparserfromhell==0.6.2
    pydantic==1.8.2
    SQLAlchemy==1.4.20
    Unidecode==1.2.0

[options.packages.find]
where = src